<resources>
    <string name="app_name" translatable="false">MemoryGame</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="change_board_size_text" translatable="false">Change Board Size</string>
    <string name="create_custom_game" translatable="false">Create custom game</string>
    <string name="create_custom_game_title" translatable="false">Create custom memory game</string>
    <string name="download_custom_game" translatable="false">Download custom gamea</string>
    <string name="invalid_move" translatable="false">Invalid Move</string>
    <string name="game_already_won" translatable="false">Game Finished! Start new game</string>
    <string name="game_won" translatable="false">Congratulations, You won the game</string>
    <string name="total_pairs_text" translatable="false">Pairs: %d / %d</string>
    <string name="moves_text" translatable="false">Moves: %d</string>
    <string name="alert_title" translatable="false">Alert</string>
    <string name="game_restart_message" translatable="false">Are you sure you want to restart game ?</string>
    <string name="no" translatable="false">No</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="close" translatable="false">Close</string>
    <string name="ok" translatable="false">OK</string>
    <string name="select_board_size" translatable="false">Choose Board Size</string>
    <string name="download_game" translatable="false">Download Game</string>
    <string name="quite_game_message" translatable="false">Are you sure you want to quit this game ?</string>
    <string name="game_won_message" translatable="false">Congratulations, You won the game</string>

    // custom game
    <string name="save" translatable="false">Save</string>
    <string name="custom_game_name_hint" translatable="false">Game name (example: \'panda_fun\')</string>
    <string name="uploaded_message_info" translatable="false">Uploaded Successfully !  Let\'s play this game %s</string>
    <string name="photo_choose_title" translatable="false">Chosen Images (%d / %d)</string>
    <string name="read_write_permission_error" translatable="false">You need to accept permission, for creating custom game</string>

    // errors
    <string name="photo_picking_error" translatable="false">Unable to pick photos, something went wrong</string>
    <string name="game_creation_error" translatable="false">Failed to create game</string>
    <string name="game_load_error" translatable="false">failed load the game.</string>
    <string name="game_not_found_error" translatable="false">Sorry, could not find this %s game"</string>
    <string name="view_shrink_error" translatable="false">Refresh game, if  views does not render properly</string>
    <string name="duplicate_text" translatable="false">Duplicate Error</string>
    <string name="game_name_conflict" translatable="false">A %s name already exist, Please enter another name</string>
    <string name="server_error" translatable="false">Encountered Server Error</string>
    <string name="image_uploading_error" translatable="false">Failed to upload images</string>
    <string name="easy_board_size" translatable="false">Easy (4 x 2)</string>
    <string name="medium_board_size" translatable="false">Medium (6 x 3)</string>
    <string name="hard_board_size" translatable="false">Hard (6 x 4)</string>
    <string name="very_hard_board_size" translatable="false">Very Hard (7 x 4)</string>
    <string name="network_error" translatable="false">No Internet Connection</string>
    <string name="no_name_error" translatable="false">Enter game name to download</string>
    <string name="developer_name" translatable="false">Created by Aditya ➡</string>
    <string name="enter_game_name_hint">Enter game name</string>
    <string name="game_share_info" translatable="false">I agree to share my game with all users</string>
    <string name="download_game_error" translatable="false">Something went wrong, while downloading game</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username_hint" translatable="false">Enter Username</string>
    <string name="create_account" translatable="false">Add Account</string>
    <string name="create" translatable="false">Create</string>
    <string name="username_validation_error" translatable="false">username must be more than 3 characters</string>
    <string name="username_conflict" translatable="false">Username already taken</string>
    <string name="user_created_message" translatable="false">Your account has been successfully created</string>
    <string name="sub_head" translatable="false">By creating account, you can download or share custom game images</string>
    <string name="user_account_failure_message" translatable="false">Failed to create account</string>
    <string name="cancel_registration_process" translatable="false">Do you want cancel creating account ?</string>
    <string name="share_with_text" translatable="false">Share game with</string>
    <string name="continue_txt" translatable="false">Continue</string>
    <string name="back_icon" translatable="false">back button</string>
    <string name="search_user" translatable="false">Search User</string>
    <string name="search" translatable="false">Search</string>
    <string name="enter_user_name_error" translatable="false">username cannot be empty</string>
    <string name="username_not_found_error" translatable="false">Username not found</string>
    <string name="username_already_added_error" translatable="false">Username Already Added</string>
    <string name="download_info_text" translatable="false"><font color="red"></font>click the game name to download</string>
    <string name="mylist" translatable="false">&#160;Games</string>
    <string name="game_list_empty_text" translatable="false">Game list is empty! Create Game</string>
    <string name="greet_text" translatable="false">Hello,&#160;</string>
    <string name="private_game_message" translatable="false">Game is for selected users only.</string>
    <string name="tagged_user_error" translatable="false">Tag one user or change share type</string>
    <string name="password_hint" translatable="false">Enter Password</string>
    <string name="password_error" translatable="false">Password should be more than 5 characters</string>
    <string name="user_save_error" translatable="false">Failed to create account</string>
    <string name="mode_title_tv" translatable="false">Game Mode</string>
    <string name="mode_normal_text" translatable="false">Normal</string>
    <string name="mode_move_text" translatable="false">Moves Limit</string>
    <string name="mode_time_limit" translatable="false">Time Limit</string>
    <string name="lose_message" translatable="false">You lost the game</string>
    <string name="try_again_message" translatable="false">You were so close to win, try again...</string>
    <string name="time_up_message" translatable="false">\Time\'s up, please restart game to play again</string>

    <string-array name="share_with">
        <item>Only Me</item>
        <item>Friends and Family</item>
        <item>EveryOne</item>
    </string-array>

</resources>