<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mi_list"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/mylist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mi_new_size"
        android:title="@string/change_board_size_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_custom"
        android:title="@string/create_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_download"
        android:title="@string/download_custom_game" />
    <item
        android:id="@+id/mi_about"
        android:title="@string/developer_name" />

</menu>