<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintStart_toStartOf="@id/radioGroupSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        tools:text="@string/change_board_size_text"/>

    <RadioGroup
        android:id="@+id/radioGroupSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/easy_board_size" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_board_size" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_board_size" />

        <RadioButton
            android:id="@+id/rbVeryHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/very_hard_board_size" />
    </RadioGroup>

    <View
        android:id="@+id/board_size_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_gray"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSize"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/settingTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintStart_toStartOf="@id/radioGroupSize"
        app:layout_constraintTop_toBottomOf="@+id/board_size_divider"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/mode_title_tv"/>

    <RadioGroup
        android:id="@+id/gameTypeGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTv">

        <RadioButton
            android:id="@+id/rbNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mode_normal_text" />

        <RadioButton
            android:id="@+id/rbMoves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_move_text" />

        <RadioButton
            android:id="@+id/rbTimeLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_time_limit" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>